add security exception handling